kubernetes/authentication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: authentication-service-deployment
spec:
 selector:
  matchLabels:
   app: authentication-service
 replicas: 1
 template:
  metadata:
   labels:
    app: authentication-service
  spec:
   containers:
    - name: authentication-service
      image: dennycox/authentication-service:latest
      ports:
      - containerPort: 80
