kubernetes/profile-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service-deployment
spec:
  selector:
    matchLabels:
    app: profile-service
  replicas: 1
  template:
    metadata:
    labels:
      app: profile-service
    spec:
    containers:
      - name: profile-service
        image: dennycox/profile-service:latest
        ports:
        - containerPort: 80
