kubernetes/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-mq-deployment
  labels:
    app: rabbit-mq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit-mq
  template:
    metadata:
      labels:
        app: rabbit-mq
    spec:
      containers:
      - name: rabbit-mq
        image: rabbitmq:3-management
        resources: {}
        ports:
          - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbit-mq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
