kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2 
spec:
  rules:
    - http:
        paths:
          # Authentication Service 
          - path: /authentication-service/?(.*)
            pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 80
          # Profile Service 
          - path: /profile-service/?(.*)
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80
          # Kwetter Frontend 
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
